tryPark/unpark + canBlock state check for pinned pollers (#116)
canBlock() is a pure query: checks queue AND carrier state (< SEARCHING
to prevent re-entering epoll_wait after a wakeup CAS). tryPark/unpark
encapsulate the PARKED transition for both carrier loop and poller.

tryPark rollback handles concurrent wakeupAsSearcher CAS — the
getAndSet(RUNNING) in the re-check failure path must check and handle
SEARCHING state, same TOCTOU pattern as the original getAndSet fix.

handleSearchWake calls stoppedSearching directly (no searching flag).
Carrier loop and poller both use unpark() for the wake path.

Results (16 cores, 10 forks, 5wu, 10i, 5s):
  Poller large: 445.7 ± 3.7 ops/s (0 leaks in 10M+ signals)
  No poller:    457.8 ± 5.0 ops/s
  Poller small: 38,618 ± 2,102 ops/s
  FJP:          ~420 large, ~27K small